end point para criar usuario e configuracao de cors

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=13.216.147.106;Database=leapcert_db;User=frois;Password=FroisPeek@231;"
+  },
+  "CORS": {
+    "AllowedOrigins": "http://localhost:3000"
+  }
 }
