add HelperService and discord workflow

--- a/leapcert-back.csproj
+++ b/leapcert-back.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include=".github\workflows\discord.yml" />
+  </ItemGroup>
+
 </Project>
