--- a/.github/workflows/envio_email_boas_vindas.yml
+++ b/.github/workflows/envio_email_boas_vindas.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
-          pip install pyodbc smtplib
+          pip install pyodbc
 
       - name: Executar script de envio de emails
         env:
