--- a/.github/workflows/envio_email_boas_vindas.yml
+++ b/.github/workflows/envio_email_boas_vindas.yml
@@ -2,8 +2,8 @@ name: Enviar Email de Boas Vindas
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Executa a cada hora 
-  workflow_dispatch: 
+    - cron: '0 * * * *'  # Executa a cada hora
+  workflow_dispatch:
 
 jobs:
   enviar_emails:
@@ -13,12 +13,21 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
+      - name: Instalar dependências do sistema (ODBC)
+        run: |
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y curl gnupg
+          curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/msprod.list
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17 unixodbc-dev
+
       - name: Configurar Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Instalar dependências
+      - name: Instalar dependências Python
         run: |
           python -m pip install --upgrade pip
           pip install pyodbc
