Mudei a configuração do banco de dados e adicionei um repository pattern

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=13.216.147.106;Database=leapcert_db;User=frois;Password=FroisPeek@231;"
+    "DefaultConnection": "Server=147.79.110.137,1433;Database=leapcert_db;User=sa;Password=#Frogger2025;TrustServerCertificate=True;Encrypt=false"
   },
   "CORS": {
-    "AllowedOrigins": "http://localhost:3000"
+    "AllowedOrigins": "https://leapcert.com.br/"
   }
 }
