configurei os arquivos docker e a pipeline do github actions

--- a/leapcert-back.csproj
+++ b/leapcert-back.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>leapcert_back</RootNamespace>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include=".github\workflows\deploy.yml" />
     <Content Include=".github\workflows\discord.yml" />
   </ItemGroup>
 
