--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
     "DefaultConnection": "Server=147.79.110.137,1433;Database=leapcert_db;User=sa;Password=#Frogger2025;TrustServerCertificate=True;Encrypt=false"
   },
   "CORS": {
-    "AllowedOrigins": "https://leapcert.com.br/"
+    "AllowedOrigins": "https://leapcert.com.br"
   }
 }
