fiz um sistema de autentificacao jwt utilizando repository pattern

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "CORS": {
     "AllowedOrigins": "http://localhost:3000"
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:5036",
+    "Audience": "http://localhost:3000",
+    "Secret": "ce22cd764a92721601bf5b84e97cb882"
   }
 }
