--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,10 @@
   },
   "CORS": {
     "AllowedOrigins": "https://leapcert.com.br"
+  },
+  "Jwt": {
+    "Issuer": "https://leapcert.com.br",
+    "Audience": "https://api.leapcert.com.br",
+    "Secret": "eX1@7J#r9aPb!Tz2FqWkLmNcSdUvXyZqR4tGh9bVcXyZ1Q3wE7RsT0YpLkMnOpQz"
   }
 }
