adicionei alguns models novos para configuracao de modulos e configurei o recebimento do token jwt do header

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,6 +11,7 @@
   "Jwt": {
     "Issuer": "http://localhost:5036",
     "Audience": "http://localhost:3000",
-    "Secret": "ce22cd764a92721601bf5b84e97cb882"
+    "Secret": "ce22cd764a92721601bf5b84e97cb882",
+    "Domain": "localhost"
   }
 }
