--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,7 @@
   "Jwt": {
     "Issuer": "https://leapcert.com.br",
     "Audience": "https://api.leapcert.com.br",
-    "Secret": "eX1@7J#r9aPb!Tz2FqWkLmNcSdUvXyZqR4tGh9bVcXyZ1Q3wE7RsT0YpLkMnOpQz"
+    "Secret": "eX1@7J#r9aPb!Tz2FqWkLmNcSdUvXyZqR4tGh9bVcXyZ1Q3wE7RsT0YpLkMnOpQz",
+    "Domain": ".leapcert.com.br"
   }
 }
