feat(leapcert-back): integrate MinIO storage

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,10 @@
     "Audience": "https://api.leapcert.com.br",
     "Secret": "eX1@7J#r9aPb!Tz2FqWkLmNcSdUvXyZqR4tGh9bVcXyZ1Q3wE7RsT0YpLkMnOpQz",
     "Domain": ".leapcert.com.br"
+  },
+  "MinIO": {
+    "AccessKey": "aGHfPCFJG2B61TmdgGDv",
+    "SecretKey": "PUO7HnwCGkAMgDm2EAyzKGEat1zVXbgsrTN7K8Eh",
+    "EndPoint": "minio.s3.leapcert.com.br"
   }
 }
