feat(minio): implement folder creation and improved object listing from bucket

--- a/appsettings.json
+++ b/appsettings.json
@@ -20,6 +20,7 @@
   "MinIO": {
     "AccessKey": "aGHfPCFJG2B61TmdgGDv",
     "SecretKey": "PUO7HnwCGkAMgDm2EAyzKGEat1zVXbgsrTN7K8Eh",
-    "EndPoint": "minio.s3.leapcert.com.br"
+    "EndPoint": "minio.s3.leapcert.com.br",
+    "Bucket": "leapcert"
   }
 }
