--- a/leapcert-back.csproj
+++ b/leapcert-back.csproj
@@ -23,6 +23,9 @@
     </PackageReference>
     <PackageReference Include="Minio" Version="6.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <None Update="n.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
